# airplane_tracker

./: .gitignore  README.md  main.py  opensky-network.response.json  pyproject.toml
data/: airplanes_data.csv
src/: airplane.py  airplane_service.py  api.py  base_api.py  base_client.py  base_saver.py  base_storage.py  csv_saver.py  csv_storage.py  file_storage.py  json_saver.py  json_storage.py  utils.py
tests/: __init__.py  conftest.py  test_airplane.py  test_airplane_service.py  test_api.py  test_base_api.py  test_csv_saver.py  test_csv_storage.py  test_json_saver.py  test_json_storage.py  test_utils.py
