[tool.poetry]
name = "airplane-tracker"
version = "0.1.0"
description = ""
authors = ["Vladislav Spinul"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.group.lint.dependencies]
black = "^26.3.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
strict = true
warn_unreachable = true
exclude = 'venv'